force-app/main/default/objects/Project_Team__c/Project_Team__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant
2. ZRD
3. SF-641</description>
    <label>Projekt Team - Mitglied</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Project Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projekt Team - Mitglieder</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>