force-app/main/default/objects/Project_Team__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>1. Not integration relevant
2. ZR
3. SF-1211</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>