force-app/main/default/objects/Project_Team__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant
2. ZRD
3.</description>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>