force-app/main/default/objects/Project_Team__c/fields/Team_Member_AD_Login_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_AD_Login_Name__c</fullName>
    <description>1. Not integration relevant
2. ZBM
3. SF-1235. Helper field for My Project Teams List View.</description>
    <formula>Team_Member__r.AD_Login_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member AD Login Name</label>
    <type>Text</type>
</CustomField>