force-app/main/default/objects/Project_Team__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <description>1. Integration relevant
2. ZRD
3.</description>
    <label>Team Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Branch_Manager</fullName>
                <isActive>false</isActive>
                <label>Branch Manager</label>
            </value>
            <value>
                <fullName>Calculator</fullName>
            </value>
            <value>
                <fullName>Commercial_Clerk</fullName>
                <isActive>false</isActive>
                <label>Commercial Clerk</label>
            </value>
            <value>
                <fullName>Commercial_Manager</fullName>
                <label>Commercial Manager</label>
            </value>
            <value>
                <fullName>Consultant Logistic and Sales</fullName>
            </value>
            <value>
                <fullName>Contact_Business_Administration</fullName>
                <label>Contact - Business Administration</label>
            </value>
            <value>
                <fullName>Controlling</fullName>
                <isActive>false</isActive>
                <label>Controlling</label>
            </value>
            <value>
                <fullName>Deputy_Director_of_Rental_Office</fullName>
                <label>Deputy Director of Rental Office</label>
            </value>
            <value>
                <fullName>Deputy_Head_of_Region</fullName>
                <label>Deputy Head of Region</label>
            </value>
            <value>
                <fullName>Director_of_Rental_Office</fullName>
                <label>Director of Rental Office</label>
            </value>
            <value>
                <fullName>Head_of_Construction</fullName>
                <isActive>false</isActive>
                <label>Head of Construction</label>
            </value>
            <value>
                <fullName>Head_of_Division</fullName>
                <label>Head of Division</label>
            </value>
            <value>
                <fullName>Head_of_Energy_Trade</fullName>
                <label>Head of Energy Trade</label>
            </value>
            <value>
                <fullName>Head_of_industrial_equipment</fullName>
                <label>Head of industrial equipment</label>
            </value>
            <value>
                <fullName>Head_of_operating_platforms_elevators_and_fork_lift_trucks</fullName>
                <label>Head of operating platforms elevators and fork lift trucks</label>
            </value>
            <value>
                <fullName>Head_of_Operation</fullName>
                <isActive>false</isActive>
                <label>Head of Operation</label>
            </value>
            <value>
                <fullName>Head_of_Region</fullName>
                <label>Head of Region</label>
            </value>
            <value>
                <fullName>Head_of_Sales</fullName>
                <label>Head of Sales</label>
            </value>
            <value>
                <fullName>Head_of_Service</fullName>
                <isActive>false</isActive>
                <label>Head of Service</label>
            </value>
            <value>
                <fullName>Head_of_Standard</fullName>
                <isActive>false</isActive>
                <label>Head of Standard</label>
            </value>
            <value>
                <fullName>Head_of_Traffic_Telematics</fullName>
                <isActive>false</isActive>
                <label>Head of Traffic Telematics</label>
            </value>
            <value>
                <fullName>Head_of_vehicles</fullName>
                <label>Head of vehicles</label>
            </value>
            <value>
                <fullName>Inside_Sales_Customer_Consultant_Rental_Electric_and_Energy_EE</fullName>
                <label>Inside Sales/ Customer Consultant EEB (EKW)</label>
            </value>
            <value>
                <fullName>Inside Sales/ Customer Consultant Electricity and Climate</fullName>
            </value>
            <value>
                <fullName>Inside_Sales_Customer_Consultant_Rental_Construction_Logistic_LCM</fullName>
                <label>Inside Sales/ Customer Consultant LC&amp;M</label>
            </value>
            <value>
                <fullName>Inside_Sales_Customer_Consultant_Rental_Machine_and_Equipment_Rental</fullName>
                <label>Inside Sales/ Customer Consultant Rental</label>
            </value>
            <value>
                <fullName>Inside_Sales_Customer_Consultant_Rental_Accommodation_Units_RS</fullName>
                <label>Inside Sales/ Customer Consultant RS</label>
            </value>
            <value>
                <fullName>Key_Account_Manager</fullName>
                <label>Key Account Manager</label>
            </value>
            <value>
                <fullName>Key Account Manager Event</fullName>
                <isActive>false</isActive>
                <label>Key Account Manager Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>